--- a/green-api-wa/package.json
+++ b/green-api-wa/package.json
@@ -16,7 +16,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "vite": "^6.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -28,7 +29,6 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "typescript": "~5.6.2",
-    "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "typescript-eslint": "^8.18.2"
   }
 }
